# SwiftScope

./: .gitignore  Cargo.toml  Makefile  README.md  extension.toml  extension.wasm
.cargo/: config.toml
docs/: CLAUDE_AUTONOMY.md  DEBUGGING.md  claude_autonomy_prompt.md  claude_tool.md  devicectl_autonomy.md
src/: backend.rs  debug_session.rs  lib.rs  main.rs  symbols.rs
tests/: dap_harness.rs
tools/: Makefile  claude_tool_stub.py
