[package]
name = "ios-lldb-dap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
cli = ["clap", "env_logger", "dunce", "dirs"]

[dependencies]
addr2line = { version = "0.25", features = ["loader"] }
anyhow = "1"
gimli = "0.31"
log = "0.4"
object = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
zed_extension_api = { version = "0.7.0", default-features = false }

[dependencies.clap]
version = "4.5"
features = ["derive"]
optional = true

[dependencies.env_logger]
version = "0.11"
optional = true

[dependencies.dunce]
version = "1.0"
optional = true

[dependencies.dirs]
version = "5.0"
optional = true

[[bin]]
name = "ios-lldb-dap"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "ios-lldb-gendebug"
path = "src/bin/ios-lldb-gendebug.rs"
required-features = ["cli"]

[[bin]]
name = "ios-lldb-setup"
path = "src/bin/ios-lldb-setup.rs"
required-features = ["cli"]
